# llvm-epi

./: .gitignore  README.md  check-riscv.sh  setup-cmake-llvm-clang.sh
clang/: CMakeLists.txt
clang/docs/: UsersManual.rst
clang/include/clang/: module.modulemap
clang/include/clang-c/: Index.h
clang/lib/AST/: ASTContext.cpp  ASTDiagnostic.cpp  AttrImpl.cpp  Decl.cpp  ItaniumMangle.cpp  JSONNodeDumper.cpp  OpenMPClause.cpp  StmtOpenMP.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp  Type.cpp  TypePrinter.cpp
clang/lib/Basic/: CMakeLists.txt  IdentifierTable.cpp  OpenMPKinds.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGBuiltin.cpp  CGCall.cpp  CGDebugInfo.cpp  CGExpr.cpp  CGExprAgg.cpp  CGLoopInfo.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGRecordLayoutBuilder.cpp  CGStmt.cpp  CGStmtOpenMP.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenTypes.cpp  TargetInfo.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp
clang/lib/Headers/: CMakeLists.txt
clang/lib/Parse/: ParseDecl.cpp  ParseExpr.cpp  ParseOpenMP.cpp  ParseTentative.cpp
clang/lib/Sema/: CMakeLists.txt  DeclSpec.cpp  Sema.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  (+8 more)
flang/: CMakeLists.txt
flang/module/: __fortran_builtins.f90  __fortran_ieee_exceptions.f90  ieee_arithmetic.f90  iso_c_binding.f90
flang/runtime/: CMakeLists.txt  descriptor-io.h  dot-product.cpp  edit-input.cpp  edit-output.cpp  edit-output.h  numeric.cpp  random.cpp  tools.h  transformational.cpp  wrap-flang.py
llvm/: CMakeLists.txt
llvm/docs/: LangRef.rst
openmp/: CMakeLists.txt
openmp/cmake/: OpenMPTesting.cmake
openmp/libomptarget/plugins/epi/: CMakeLists.txt
openmp/libomptarget/plugins/epi/src/: rtl.cpp
openmp/runtime/: CMakeLists.txt
utils/EPI/: setup-cmake.sh
(+1125 files in other folders)
